grammar.txt
program     ::= { statement }

statement   ::= vardecl ";"
              | printstmt ";"
              | ifstmt ";"
              | assign ";"

vardecl     ::= "make" IDENTIFIER "=" expression
assign      ::= IDENTIFIER "=" expression
printstmt   ::= "wrep" expression

ifstmt      ::= "if" expression "do" block
                 [ "else" block ]

block       ::= { statement }

expression  ::= equality
equality    ::= comparison { ("==" | "!=") comparison }
comparison  ::= term { (">" | "<" | ">=" | "<=") term }
term        ::= factor { ("+" | "-") factor }
factor      ::= unary { ("*" | "/" | "%") unary }
unary       ::= ("-" | "+") unary | primary
primary     ::= NUMBER | STRING | IDENTIFIER | "(" expression ")"
